--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-room",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -33,7 +33,7 @@
     "globals": "^16.5.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.50.0",
+    "typescript-eslint": "^8.50.1",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "pnpm": {
